2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.

2006-08-12  SDB <sdb@cloud9.net>
	* include/prototype.h, src/s_misc.c, src/s_sheet_data.c,
	src/s_table.c, src/s_toplevel.c:  Applied patch from Jeff Mallatt
	which implements ability to handle attrib strings with multiple
	= signs. 

2006-08-12  SDB <sdb@cloud9.net>
	* configure.ac, src/parsecmd.c:  Implemented getopt_long
	for systems which have it.
	
2006-08-12  SDB <sdb@cloud9.net>
	* include/prototype.h, include/x_menu.h,
	src/s_visibility.c, src/x_fileselect.c, src/x_gtksheet.c,
	src/x_window.c:  Made cell text different colors depending
	upon attribute visibility.

2006-08-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * src/*.c: Applied Patch#1533798: Remove pre-GTK2 code from geda
        by Peter Brett.

2006-07-31 SDB <sdb@cloud9.net>
        * src/gtksheet_2_2.c: fixed bug in gtk_sheet_make_backing_pixmap.
	
2006-07-25 Stuart Brorson <sdb@cloud9.net>
	* src/f_export.c, src/x_dialog.c and others:  Implemented
	ability to export CSV file of component sheet.

	* ToDos, README:  Updated expository material to reflect current
	state of project.
	
2006-07-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gtksheet_2_2.c: Changed a g_free on a gdk_pixmap to 
	g_object_unref to fix a valgrind error and the following 
	output when	
	exiting gattrib:  free(): invalid pointer 0x812a108!

	* src/gattrib.c, src/gtksheet_2_2.c, src/s_object.c, 
	src/s_rename.c, src/s_sheet_data.c, src/s_string_list.c, 
	src/s_table.c, src/s_toplevel.c, src/x_dialog.c, src/x_fileselect.c,
	src/x_gtksheet.c, src/x_window.c: Changed all malloc/free calls to
	g_malloc/g_free to be consistent with libgeda

2006-06-03 Stuart Brorson <sdb@cloud9.net>